--- a/index.html
+++ b/index.html
@@ -23,22 +23,18 @@
         <input placeholder="ENTER AUTHOR NAME" id="bauth" type="text" class="form-control mt-4">
         <input placeholder="DESCRIPTION" id="bdes" type="text" class="form-control mt-4">
 
-        <button onclick="AddBook()" type="submit" class="mt-3"  style="color: rgb(8, 8, 8); border-radius:5px; width: 150px ; height: 45px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: rgba(160, 20, 20, 0.904); box-shadow: inset  -2px  -3px 8px #813c3c, inset 5px 5px 12px rgba(8, 8, 8, 0.452);
+        <button onclick="AddBook()" type="submit" class="mt-3 w-25"  style="color: rgb(8, 8, 8); border-radius:5px ; height: 45px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: rgba(160, 20, 20, 0.904); box-shadow: inset  -2px  -3px 8px #813c3c, inset 5px 5px 12px rgba(8, 8, 8, 0.452);
         border: none;">Add Book</button>
 
 
         <div class="container w-100 p-3 mt-2 text-center text-white " style="background-color:  rgba(163, 51, 51, 0); border-radius: 5px;">
 
-            <button onclick="searchBook()" type="button" class="" style="background-color: rgba(107, 11, 8, 0.932); height:50px; width:400px; border-radius: 10px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;  box-shadow: inset  -3px  -3px 8px #8b6666cb, inset 5px 5px 12px rgba(0, 0, 0, 0.432);
+            <button onclick="searchBook()" type="button" class="w-75" style="background-color: rgba(107, 11, 8, 0.932); height:50px; border-radius: 10px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;  box-shadow: inset  -3px  -3px 8px #8b6666cb, inset 5px 5px 12px rgba(0, 0, 0, 0.432);
             border: none;" >Search Book</button>
     
         </div> 
     </div> 
-    <!-- <div class="container w-50 p-4 mt-3 text-center text-white " style="background-color:  rgb(41, 72, 117); border-radius: 5px;">
-
-        <button onclick="searchBook()" type="button" class="btn btn-info mt-2">Search Book</button>
-
-    </div>     -->
+   
 </body>
 <script src="./book.js"></script>
 </html>
